Fix post in openapi yaml
Post was supposed not to require userid.
Backend code is made so, and originally it's supposed to be so.
